[package]
name = "lon"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
stderrlog = "0.6.0"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking","http2","rustls-tls","json"] }
nix-compat = { git = "https://git.snix.dev/snix/snix", default-features = false }

[dev-dependencies]
expect-test = "1.5.1"
assert_cmd = "2.0.17"
tempfile = "3.20.0"
indoc = "2.0.6"

[build-dependencies]
sha2 = "0.10.9"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
